--- a/academico/app.html
+++ b/academico/app.html
@@ -157,16 +157,19 @@
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
-                    <div class="pt-3">
+                    <div>
+                        <div class="list-group-flush">
+                            <a href="../index.html" class="list-group-item list-group-item-action comfortaa-font-300">
+                                <i class="bi bi-house h4 me-2"></i>Inicio</a>
+                        </div>
+                        <br>
                         <h4 class="quicksand-font-600"><i class="bi bi-menu-button-wide-fill"></i></i> AcadSuite :
                         </h4>
                         <br>
                         <div class="list-group-flush">
-                            <a href="/acadsuite/web.html"
-                                class="list-group-item list-group-item-action comfortaa-font-300"> <i></i>
-                                <span class="material-symbols-outlined p-0 ">
-                                    language
-                                </span> Conoce nuestra Web</a>
+                            <a href="../acadsuite/web.html"
+                                class="list-group-item list-group-item-action comfortaa-font-300">
+                                <i class="bi bi-globe h4 me-2"></i>Conoce Nuestra Web</a>
                         </div>
                     </div>
                 </div>
@@ -679,6 +682,7 @@
         </div>
     </section>
     <!-- end acceso web-->
+
 
     <!-- botón de inicio -->
     <div class="container pb-3">
