--- a/acadsuite/web.html
+++ b/acadsuite/web.html
@@ -163,7 +163,7 @@
                 <div class="offcanvas-body">
                     <div class="list-group-flush">
                         <a href="../index.html" class="list-group-item list-group-item-action comfortaa-font-300">
-                            <i class="bi bi-house mx-2"></i>Inicio</a>
+                            <i class="bi bi-house h4 me-2"></i>Inicio</a>
                     </div>
 
                     <div class="pt-5">
@@ -171,12 +171,9 @@
                         </h4>
                         <br>
                         <div class="list-group-flush">
-                            <a href="/academico/app.html"
-                                class="list-group-item list-group-item-action comfortaa-font-300" aria-current="true">
-                                <span class="material-symbols-outlined">
-                                    apps
-                                </span> Conoce Nuestra App
-                            </a>
+                            <a href="../academico/app.html"
+                                class="list-group-item list-group-item-action comfortaa-font-300">
+                                <i class="bi bi-menu-up h4 me-2"></i>Conoce nuestra App</a>
                         </div>
                     </div>
                 </div>
